[package]
name = "gridbugs"
description = "Collection of re-exported crates for building roguelike games"
version = "0.3.0"
edition = "2021"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/gridbugs.git"
repository = "https://github.com/gridbugs/gridbugs.git"
documentation = "https://docs.rs/gridbugs"


[features]
coord_2d_serialize = [ "coord_2d/serialize" ]
grid_2d_serialize = [ "grid_2d/serialize" ]
line_2d_serialize = [ "line_2d/serialize" ]
direction_serialize = [ "direction/serialize" ]
rgb_int_serialize = [ "rgb_int/serialize" ]
entity_table_serialize = [ "entity_table/serialize" ]
entity_table_realtime_serialize = [ "entity_table_realtime/serialize" ]
spatial_table_serialize = [ "spatial_table/serialize" ]
shadowcast_serialize = [ "shadowcast/serialize" ]
grid_search_cardinal_serialize = [ "grid_search_cardinal/serialize" ]
chargrid_serialize = [ "chargrid/serialize" ]
chargrid_wgpu_serialize = [ "chargrid_wgpu/serialize" ]
chargrid_ggez_serialize = [ "chargrid_ggez/serialize" ]
chargrid_ansi_terminal_serialize = [ "chargrid_ansi_terminal/serialize" ]
chargrid_web_serialize = [ "chargrid_web/serialize" ]

chargrid_gamepad = [ "chargrid/gamepad" ]
chargrid_wgpu_gamepad = [ "chargrid_wgpu/gamepad" ]
chargrid_ggez_gamepad = [ "chargrid_ggez/gamepad" ]
chargrid_ansi_terminal_gamepad = [ "chargrid_ansi_terminal/gamepad" ]
chargrid_web_gamepad = [ "chargrid_web/gamepad" ]

direction_rand = [ "direction/rand" ]
rgb_int_rand = [ "rgb_int/rand" ]

backend = [
    "coord_2d",
    "grid_2d",
    "line_2d",
    "direction",
    "rgb_int",
    "entity_table",
    "entity_table_realtime",
    "spatial_table",
    "shadowcast",
    "grid_search_cardinal",
]
backend_serialize = [
    "coord_2d_serialize",
    "grid_2d_serialize",
    "line_2d_serialize",
    "direction_serialize",
    "rgb_int_serialize",
    "entity_table_serialize",
    "entity_table_realtime_serialize",
    "spatial_table_serialize",
    "shadowcast_serialize",
    "grid_search_cardinal_serialize",
]

storage = [ "general_storage_static" ]
storage_backend_file = [ "general_storage_static/file" ]
storage_backend_web = [ "general_storage_static/web" ]
storage_format_json = [ "general_storage_static/json" ]
storage_format_bincode = [ "general_storage_static/bincode" ]
storage_format_yaml = [ "general_storage_static/yaml" ]
storage_format_toml = [ "general_storage_static/toml" ]
storage_compress = [ "general_storage_static/compress" ]

audio = [ "general_audio_static" ]
audio_backend_native = [ "general_audio_static/native" ]
audio_backend_web = [ "general_audio_static/web" ]
audio_format_native_flac = [ "general_audio_static/native_flac" ]
audio_format_native_vorbis = [ "general_audio_static/native_vorbis" ]
audio_format_native_wav = [ "general_audio_static/native_wav" ]
audio_format_native_mp3 = [ "general_audio_static/native_mp3" ]
audio_backend_native_force_dedicated_audio_thread = [ "general_audio_static/native_force_dedicated_audio_thread" ]

[dependencies]
coord_2d = { version = "0.3", optional = true }
grid_2d = { version = "0.15", optional = true }
line_2d = { version = "0.5", optional = true }
direction = { version = "0.18", optional = true }
rgb_int = { version = "0.1", optional = true }
entity_table = { version = "0.2", optional = true }
entity_table_realtime = { version = "0.1", optional = true }
spatial_table = { version = "0.4", optional = true }
shadowcast = { version = "0.8", optional = true }
grid_search_cardinal = { version = "0.3", optional = true }
chargrid = { version = "0.7", optional = true }
chargrid_wgpu = { version = "0.2", optional = true }
chargrid_ggez = { version = "0.2", optional = true }
chargrid_ansi_terminal = { version = "0.3", optional = true }
chargrid_web = { version = "0.3", optional = true }
general_storage_static = { version = "0.2", optional = true }
general_audio_static = { version = "0.3", optional = true }
